--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,5 +34,5 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           yarn install --frozen-lockfile
-          yarn build
+          # yarn build
           yarn release
