--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "0BSD",
   "private": false,
   "author": "visualjeff <visualjeff@icloud.com>",
-  "plugins": [
-    ["npm", { "access": "public" }]
-  ]
+  "auto": {
+    "plugins": [
+      ["npm", { "access": "public" }]
+    ]
+  }  
 }
