--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "plugins": [
       "npm"
     ]
-  }  
+  },
+  {
+    "publishConfig": {
+      "registry": "https://registry.npmjs.org/",
+      "access": "public"
+    }
+  }
 }
